// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScopeExplorer > a node lists the rules its statement made 1`] = `
{
  "Suits": [
    {
      "name": "Card_Suits",
      "syntax": "(Card|card) (Suits|suits)",
    },
  ],
  "draw (a card)": [
    {
      "name": "draw",
      "syntax": "draw {thisArg:expression}",
    },
  ],
}
`;

exports[`ScopeExplorer > a type's members:  in document order, by file then line -- each with its line 1`] = `
[
  "property rank",
  "enumeration Ranks",
  "constant ace",
  "constant jack",
  "constant queen",
  "constant king",
  "property suit",
  "enumeration Suits",
  "constant clubs",
  "constant diamonds",
  "constant hearts",
  "constant spades",
  "property color",
  "constant black",
  "constant red",
  "property value",
  "property direction",
  "enumeration Directions",
  "constant up",
  "constant down",
  "method is face up",
  "method is face down",
  "method is a face card",
  "method is a (suit)",
  "method is a (rank)",
  "method is the (rank) of (suits)",
  "property name",
  "property short_suit",
  "property short_rank",
  "property short_direction",
  "property short_name",
  "property state",
  "method turn (a card) face up",
  "method turn (a card) face down",
  "method turn (a card) over",
  "method draw (a card)",
  "method move (a card) to (a pile)",
  "method play (a card)",
]
`;

exports[`ScopeExplorer > root holds the built-in types, then the project:  its files, and what each declares 1`] = `
"root Spell (built in)
  type Thing
  type List
  type App (is a Thing)
  project Solitaire
    file Card.spell
      type Card (is a Thing)
      function test card setup
    file Deck.spell
      type Deck (is a List)
      function test deck creation
    file Pile.spell
      type Pile (is a List)
    file Solitaire.spell
      type Game (is a App)
      variable game (Game)
      variable all_piles (list of piles)
      variable foundations (list of piles)
      variable tableaus (list of piles)
      type Stock_Pile (is a Pile)
      variable stock (Stock_Pile)
      type Discard_Pile (is a Pile)
      variable discards (Discard_Pile)
      type Foundation (is a Pile)
      variable it (Foundation)
      type Tableau (is a Pile)
      variable deck (Deck)
      function debug the game
      function reset the stock pile
      function play from the stock pile
      function deal the cards
      function auto-play
      function reset the game
      function cheat"
`;

exports[`ScopeExplorer of a project importing another, compiled > the imported project shows, with its own files and types, ahead of ours 1`] = `
"root Spell (built in)
  type Thing
  type List
  type App (is a Thing)
  project lib (imported)
    file Card.spell
      type Card (is a Thing)
      function test card setup
    file Deck.spell
      type Deck (is a List)
      function test deck creation
    file Pile.spell
      type Pile (is a List)
  project app
    file Solitaire.spell
      type Game (is a App)
      variable game (Game)
      variable all_piles (list of piles)
      variable foundations (list of piles)
      variable tableaus (list of piles)
      type Stock_Pile (is a Pile)
      variable stock (Stock_Pile)
      type Discard_Pile (is a Pile)
      variable discards (Discard_Pile)
      type Foundation (is a Pile)
      variable it (Foundation)
      type Tableau (is a Pile)
      variable deck (Deck)
      function debug the game
      function reset the stock pile
      function play from the stock pile
      function deal the cards
      function auto-play
      function reset the game
      function cheat"
`;
